--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </div>
         <div class="c2">
             <h2>start the program</h2>
+            <h3>Received code from VL</h3>
         </div>
         <div class="c3">end the program</div>
     </div>
